# zeno

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  DOCKERFILE  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  build-test-deploy.yml  deploy-ecr.yml
Book search/src/: index.css
Book search/src/loader/: loader.css
Book search/src/pages/home/: home.css  home.jsx
Frontend/: .prettierrc  index.html  output.css  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/component/molecule/footer/: footer.jsx
Frontend/src/component/molecule/header/: header.css  header.jsx
Frontend/src/component/molecule/navbar/: navbar.css  navbar.jsx
Frontend/src/component/organism/header/: header.css  header.jsx
Frontend/src/component/slider/: slider.jsx
Frontend/src/config/: router.jsx
Frontend/src/loader/: loader.css  loader.jsx
Frontend/src/modal/: modal.css  modal.jsx
Frontend/src/pages/aboutMe/: aboutMe.jsx
Frontend/src/pages/bookDetails/: bookDetails.jsx
Frontend/src/pages/home/: home.css  home.jsx
backend/api/v1/: scraper.py
backend/src/api/v1/: app.py
backend/src/api/v2/: app.py  auth.py  database.py  endpoints.py  models.py
infra/: task-def.json
server/: .env  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup_async.sh  test_async_db.py
server/zeno/: app.py
server/zeno.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/zeno/api/core/: .env  base_schemas.py  config.py  db.py  email.py  security.py  utils.py
server/zeno/api/db/: models.py  session.py
server/zeno/api/endpoints/: endpoints.py  schemas.py
server/zeno/api/models/: __init__.py  base.py  search.py  users.py
server/zeno/api/search/: endpoints.py  schemas.py  service.py
server/zeno/api/user/: endpoints.py  models.py  schemas.py  service.py
server/zeno/api/v1/: app.py  build-index.py  scraper.py
server/zeno/scripts/migration/: db_migrate.py
src/: app.py  build-index.py  requirements.txt
tests/: tests.py
