[project]
name = "zeno"
version = "0.1.0"
description = "Backend for Zeno, a Semantic Search based books recommendation engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi>=25.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography>=45.0.3",
    "fastapi==0.115.12",
    "greenlet==3.1.1",
    "gunicorn>=23.0.0",
    "h11==0.14.0",
    "idna==3.10",
    "langchain-gemini>=0.1.1",
    "langgraph>=0.5.3",
    "numpy==2.2.4",
    "passlib>=1.7.4",
    "pgvector==0.4.0",
    "asyncpg",
    "pyarrow>=21.0.0",
    "pydantic==2.11.2",
    "pydantic-core==2.33.1",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv==1.1.0",
    "python-multipart>=0.0.20",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.1",
    "structlog==25.2.0",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.taskipy.tasks]
api = { cmd = "uvicorn zeno.app:app --port=8080"}

[tool.poetry.packages]
packages = [
    {"include" = "zeno"}
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

